--- a/pomogatorWeb/src/index.html
+++ b/pomogatorWeb/src/index.html
@@ -10,6 +10,13 @@
 </head>
 <body style="height: 100vh">
   <app-root>
+
   </app-root>
+  <script type="text/javascript">var apikey = 'H6XyiCT0w1t9GgTjqhRXxDMrVj9h78ya3NuxlwM7XUs';</script>
+  <script type="text/javascript" src="./libs/GetMouseClick.js"></script>
+  <script type="text/javascript" src="https://js.api.here.com/v3/3.1/mapsjs-core.js"></script>
+  <script type="text/javascript" src="https://js.api.here.com/v3/3.1/mapsjs-service.js"></script>
+  <script type="text/javascript" src="https://js.api.here.com/v3/3.1/mapsjs-ui.js"></script>
+  <script type="text/javascript" src="https://js.api.here.com/v3/3.1/mapsjs-mapevents.js"></script>
 </body>
 </html>
