--- a/pomogatorSimple/map.html
+++ b/pomogatorSimple/map.html
@@ -7,7 +7,8 @@
     <title>Map at a specified location</title>
     <link rel="stylesheet" type="text/css" href="https://js.api.here.com/v3/3.1/mapsjs-ui.css" />
     <link rel="stylesheet" type="text/css" href="map.css" />
-    <script type="text/javascript" src="apikey.js"></script>    
+    <script type="text/javascript" src="environment.js"></script>    
+    <script type="text/javascript" src="autoCompleteService.js"></script>    
     <script type="text/javascript" src="https://js.api.here.com/v3/3.1/mapsjs-core.js"></script>
     <script type="text/javascript" src="https://js.api.here.com/v3/3.1/mapsjs-service.js"></script>
     <script type="text/javascript" src="https://js.api.here.com/v3/3.1/mapsjs-ui.js"></script>
@@ -15,8 +16,8 @@
   </head>
   <body id="markers-on-the-map">
     <div class="page-header">
-        <h1>Map at a specified location</h1>
-        <p>Display a map at a specified location and zoom level</p>
+      <input type="text" id="auto-complete" style="margin-left:5%; margin-right:5%; min-width:90%" 
+       onkeyup="return autoCompleteListener(this, event);">
     </div>
     <p>This example displays a movable map initially centered on the <b>Brandenburg Gate</b> in the centre of Berlin <i>(52.5159°N, 13.3777°E)</i></p>
     <div id="map"></div>
