changed xhr to axios

--- a/pomogatorSimple/map.html
+++ b/pomogatorSimple/map.html
@@ -21,6 +21,7 @@
     <!-- Include Bootstrap Datepicker -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.8.0/css/bootstrap-datepicker.min.css" />
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.8.0/js/bootstrap-datepicker.min.js"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
   </head>
   <body id="markers-on-the-map">
